@@ -2,6 +2,12 @@
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Header$
 
+  21 Aug 2002; Martin Schlemmer <azarah@gentoo.org> :
+
+  Do some more cleanups to ecanonicalize(), as it dropped filenames in
+  rare cases (after my symlink cleanups), and caused glibc to bork.
+  These fixes went into canonicalize.c.
+
   20 Aug 2002; Martin Schlemmer <azarah@gentoo.org> :
 
   Fix spawn_shell() and main() in sandbox.c to properly return fail
